syntax = "proto3";

package transcode;

// GpuWorker service provides GPU-accelerated video transcoding
// from the Home Server to the VPS.
service GpuWorker {
  // Transcode video data in a bidirectional streaming manner.
  // The client sends chunks of encoded video data and receives
  // transcoded chunks in response.
  rpc Transcode(stream TranscodeChunk) returns (stream TranscodeChunk);

  // Health check endpoint
  rpc HealthCheck(HealthRequest) returns (HealthResponse);
}

// A chunk of video data for transcoding
message TranscodeChunk {
  // Video data chunk (encoded bytes)
  bytes data = 1;

  // Transcoding options for this chunk
  TranscodeOptions options = 2;

  // End of file marker - true if this is the final chunk
  bool eof = 3;

  // Sequence number for ordering chunks
  uint64 sequence = 4;
}

// Transcoding options
message TranscodeOptions {
  // Transcode mode:
  // - "passthrough": No transcoding, just remux
  // - "h264_to_h265": Transcode H.264 to H.265/HEVC
  // - "h265_to_h264": Transcode H.265 to H.264
  // - "scale": Scale to target resolution
  string mode = 1;

  // Target bitrate in bits per second
  uint32 target_bitrate = 2;

  // Target resolution (optional)
  Resolution target_resolution = 3;

  // Input codec hint
  string input_codec = 4;

  // Output codec
  string output_codec = 5;
}

// Video resolution
message Resolution {
  uint32 width = 1;
  uint32 height = 2;
}

// Health check request
message HealthRequest {
  // Optional: specific capability to check
  string capability = 1;
}

// Health check response
message HealthResponse {
  // Overall health status
  HealthStatus status = 1;

  // GPU information
  GpuInfo gpu_info = 2;

  // Available capabilities
  repeated string capabilities = 3;

  // Error message if unhealthy
  string error_message = 4;
}

// Health status enum
enum HealthStatus {
  HEALTHY = 0;
  DEGRADED = 1;
  UNHEALTHY = 2;
}

// GPU information
message GpuInfo {
  // GPU name/model
  string name = 1;

  // CUDA driver version
  string cuda_version = 2;

  // Total GPU memory in bytes
  uint64 total_memory = 3;

  // Available GPU memory in bytes
  uint64 available_memory = 4;

  // GPU utilization percentage (0-100)
  uint32 utilization = 5;

  // Number of concurrent jobs supported
  uint32 max_concurrent_jobs = 6;
}
